team pic cutoff fix

--- a/static/assets/css/overwrite.css
+++ b/static/assets/css/overwrite.css
@@ -318,7 +318,7 @@ section .game:first-of-type{
     float: right;
     display: block;
     max-width: 480px;
-    width: 95%;
+    width: 98%;
     margin-left: 1%;
     margin-right: 1%;
     
